// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details renders correctly with a selection but no data yet 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5,
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center",
      }
    }
  >
    DETAILS
  </div>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center",
      }
    }
  >
    <i
      className="giu-icon fa fa-circle-o-notch fa-spin"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
</div>
------------HTML PREVIEW---------------
<div style="-webkit-flex:none;background-color:#dcd6ff;flex:none;margin-top:5px;min-height:110px;padding:5px;">
  <div style="font-weight:900;letter-spacing:3px;margin-bottom:10px;text-align:center;">
    DETAILS
  </div>
  <div
    class="giu-large-message"
    style="color:#999999;font-size:1.4em;font-weight:700;padding:0.8em;text-align:center;"
  >
    <i
      class="giu-icon fa fa-circle-o-notch fa-spin"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
</div>
`;

exports[`Details renders correctly without a selection 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5,
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center",
      }
    }
  >
    DETAILS
  </div>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center",
      }
    }
  >
    No message selected
  </div>
</div>
------------HTML PREVIEW---------------
<div style="-webkit-flex:none;background-color:#dcd6ff;flex:none;margin-top:5px;min-height:110px;padding:5px;">
  <div style="font-weight:900;letter-spacing:3px;margin-bottom:10px;text-align:center;">
    DETAILS
  </div>
  <div
    class="giu-large-message"
    style="color:#999999;font-size:1.4em;font-weight:700;padding:0.8em;text-align:center;"
  >
    No message selected
  </div>
</div>
`;

exports[`Details when the details for the selection are available renders correctly for a message that is unused 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5,
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center",
      }
    }
  >
    DETAILS
  </div>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center",
      }
    }
  >
    <i
      className="giu-icon fa fa-circle-o-notch fa-spin"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
</div>
------------HTML PREVIEW---------------
<div style="-webkit-flex:none;background-color:#dcd6ff;flex:none;margin-top:5px;min-height:110px;padding:5px;">
  <div style="font-weight:900;letter-spacing:3px;margin-bottom:10px;text-align:center;">
    DETAILS
  </div>
  <div
    class="giu-large-message"
    style="color:#999999;font-size:1.4em;font-weight:700;padding:0.8em;text-align:center;"
  >
    <i
      class="giu-icon fa fa-circle-o-notch fa-spin"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
</div>
`;

exports[`Details when the details for the selection are available renders correctly for a message that is used 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5,
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center",
      }
    }
  >
    DETAILS
  </div>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center",
      }
    }
  >
    <i
      className="giu-icon fa fa-circle-o-notch fa-spin"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
</div>
------------HTML PREVIEW---------------
<div style="-webkit-flex:none;background-color:#dcd6ff;flex:none;margin-top:5px;min-height:110px;padding:5px;">
  <div style="font-weight:900;letter-spacing:3px;margin-bottom:10px;text-align:center;">
    DETAILS
  </div>
  <div
    class="giu-large-message"
    style="color:#999999;font-size:1.4em;font-weight:700;padding:0.8em;text-align:center;"
  >
    <i
      class="giu-icon fa fa-circle-o-notch fa-spin"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
</div>
`;
